--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,8 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
     // Retrofit with Moshi Converter
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$moshi_version"
+    implementation "com.squareup.retrofit2:converter-gson:$gson_version"
     implementation "androidx.legacy:legacy-support-v4:$legacy_version"
 
     // Lifecycle libraries
@@ -65,6 +66,7 @@ dependencies {
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
