--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,13 @@ buildscript {
     ext.espresso_version = "3.4.0"
     ext.databinding_version = "7.2.2"
     ext.moshi_version = "1.13.0"
-    ext.retrofit_version = "2.9.0"
+    ext.moshi_version = "2.9.0"
+    ext.gson_version = "2.9.0"
     ext.legacy_version = "1.0.0"
     ext.lifecycle_version = '2.5.1'
     ext.nav_version = "2.5.1"
     ext.room_version = '2.4.3'
+    ext.okhttp_version = '5.0.0-alpha.3'
 
     dependencies {
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1")
