--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     ext.espresso_version = "3.4.0"
     ext.databinding_version = "7.2.2"
     ext.moshi_version = "1.13.0"
-    ext.moshi_version = "2.9.0"
+    ext.moshi_converter_version = "2.9.0"
     ext.gson_version = "2.9.0"
     ext.legacy_version = "1.0.0"
     ext.lifecycle_version = '2.5.1'
