--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.7.0"
-    ext.material_version = "1.6.1"
-    ext.appcompat_version = "1.5.0"
-    ext.constraint_version = "2.1.4"
-    ext.junit_version = "4.13.2"
-    ext.junit_test_impl_version = "1.1.3"
-    ext.espresso_version = "3.4.0"
-    ext.databinding_version = "7.2.2"
-    ext.moshi_version = "1.13.0"
-    ext.moshi_converter_version = "2.9.0"
-    ext.gson_version = "2.9.0"
-    ext.legacy_version = "1.0.0"
-    ext.lifecycle_version = '2.5.1'
-    ext.nav_version = "2.5.1"
-    ext.room_version = '2.4.3'
-    ext.okhttp_version = '5.0.0-alpha.3'
+    ext {
+        kotlin_version = "1.7.0"
+        material_version = "1.6.1"
+        appcompat_version = "1.5.0"
+        constraint_version = "2.1.4"
+        junit_version = "4.13.2"
+        junit_test_impl_version = "1.1.3"
+        espresso_version = "3.4.0"
+        databinding_version = "7.2.2"
+        moshi_version = "1.13.0"
+        moshi_converter_version = "2.9.0"
+        gson_version = "2.9.0"
+        legacy_version = "1.0.0"
+        lifecycle_version = '2.5.1'
+        nav_version = "2.5.1"
+        room_version = '2.4.3'
+        okhttp_version = '5.0.0-alpha.3'
+        hdodenhof_version = '3.1.0'
+    }
 
     dependencies {
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1")
